tests/baselines/reference/checkJsxChildrenProperty14.errors.txt
tests/cases/conformance/jsx/file.tsx(42,11): error TS2322: Type '{ children: Element[]; a: number; b: string; }' is not assignable to type 'SingleChildProp'.
  Types of property 'children' are incompatible.
    Type 'Element[]' is not assignable to type 'Element'.
      Property 'type' is missing in type 'Element[]'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react');
    
    interface Prop {
        a: number,
        b: string,
        children: JSX.Element | JSX.Element[];
    }
    
    class Button extends React.Component<any, any> {
        render() {
            return (<div>My Button</div>)
        }
    }
    
    function AnotherButton(p: any) {
        return <h1>Just Another Button</h1>;
    }
    
    function Comp(p: Prop) {
        return <div>{p.b}</div>;
    }
    
    // OK
    let k1 = <Comp a={10} b="hi"><></><Button /><AnotherButton /></Comp>;
    let k2 = <Comp a={10} b="hi"><><Button /></><AnotherButton /></Comp>;
    let k3 = <Comp a={10} b="hi"><><Button /><AnotherButton /></></Comp>;
    
    interface SingleChildProp {
        a: number,
        b: string,
        children: JSX.Element;
    }
    
    function SingleChildComp(p: SingleChildProp) {
        return <div>{p.b}</div>;
    }
    
    // OK
    let k4 = <SingleChildComp a={10} b="hi"><><Button /><AnotherButton /></></SingleChildComp>;
    
    // Error
    let k5 = <SingleChildComp a={10} b="hi"><></><Button /><AnotherButton /></SingleChildComp>;
              ~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ children: Element[]; a: number; b: string; }' is not assignable to type 'SingleChildProp'.
!!! error TS2322:   Types of property 'children' are incompatible.
!!! error TS2322:     Type 'Element[]' is not assignable to type 'Element'.
!!! error TS2322:       Property 'type' is missing in type 'Element[]'.